- Navbar brand logo spacing fixed - Menu button changed

--- a/_sass/_navbar.scss
+++ b/_sass/_navbar.scss
@@ -5,7 +5,7 @@
     background: #43d6b5;
 }
 
-.nav-link, .navbar-brand {
+.nav-link {
     &:hover{
         text-decoration: underline 3px #43d6b5;
         
@@ -28,4 +28,5 @@
 
 .navbar-toggler{
     border: none;
+    padding: 0;
 }
